@@ -233,6 +233,7 @@
 		<variablelist>
 			<varlistentry>
 				<term><option>address</option> <replaceable>address[:port]</replaceable></term>
+				<term><option>addresses</option> <replaceable>address[:port]</replaceable></term>
 				<listitem>
 					<para>Specify the address and optionally the port of the
 					bridge to connect to. This must be given for each bridge
@@ -240,7 +241,7 @@
 					1883 is used.</para>
 					<para>Unlike rsmb, it is not currently possible to specify
 					multiple addresses for a single bridge connection
-					here.</para>
+					here. This is true even if the name "addresses" is used.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
